UAS PEMPROGRAMAN SISI KLIEN

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         padding: 0;
       }
     </style>
-    <title>ADMIN UI</title>
+    <title>Laurensius Marcellano Adi Pradana</title>
   </head>
   <body>
     <div id="root"></div>
